--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "request": "^2.88.0"
   }
